# DiningPhilosophersProblemQT

./: .gitignore  APhilThread.cpp  APhilThread.h  CMakeLists.txt  DirectionUtils.h  ForkView.cpp  ForkView.h  MainPage.cpp  MainPage.h  MainPage.ui  PagePhilosopers.cpp  PagePhilosopers.h  Phil.cpp  Phil.h  PhilPage.cpp  PhilPage.h  PhilThread.cpp  PhilThread.h  PhilThreadChandyMisra.cpp  PhilThreadChandyMisra.h  PhilThreadDeadlock.cpp  PhilThreadDeadlock.h  PhilThreadDeadlockFree.cpp  PhilThreadDeadlockFree.h  PhilThreadHoldAndWait.cpp  PhilThreadHoldAndWait.h  PhilThreadNoDeadLock.cpp  PhilThreadNoDeadLock.h  PhilThreadNoDeadlock.cpp  PhilThreadNoDeadlock.h  PhilView.cpp  PhilView.h  PhilsControlPanel.cpp  PhilsControlPanel.h  PhilsPage.cpp  PhilsPage.h  README.md  RandomUtils.h  Res.qrc  Singleton.h  (+5 more)
